# archetect

./: .gitignore  .prova.toml  .rustfmt.toml  ARCHIVE_FUNCTIONS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  build_output.txt
archetect-aml/: Cargo.toml
archetect-aml/src/: builder.rs  lib.rs  model.rs  tests.rs  types.rs
archetect-api/: Cargo.toml
archetect-api/src/: commands.rs  context_map.rs  errors.rs  io_driver.rs  lib.rs  prompt_envelope.rs  validations.rs  value_source.rs
archetect-api/src/commands/: bool_prompt_info.rs  editor_prompt_info.rs  int_prompt_info.rs  list_prompt_info.rs  multiselect_prompt_info.rs  prompt_info.rs  prompt_option.rs  select_prompt_info.rs  text_prompt_info.rs  write_directory_info.rs  write_file_info.rs
archetect-bin/: .archetect  .archetect.yaml  Cargo.toml  archetect  build.rs
archetect-bin/pkg/windows/: Archetect.iss
archetect-bin/src/: cli.rs  main.rs  observability.rs  traces.rs
archetect-bin/src/answers/: answers.rs  mod.rs
archetect-bin/src/configuration/: figment_clap_provider.rs  figment_config.rs  mod.rs  tests.rs
archetect-bin/src/subcommands/: actions_subcommand.rs  cache_subcommand.rs  check_subcommand.rs  config_subcommand.rs  config_subcommmand.rs  connect_subcommand.rs  eval_subcommand.rs  ide_subcommand.rs  interface_subcommand.rs  learn_subcommand.rs  mcp_subcommand.rs  mod.rs  search_subcommand.rs  server_subcommand.rs
archetect-cli/: Cargo.toml  README.md
archetect-cli/src/: answers.rs  cli.rs  main.rs
archetect-cli/src/answers/: answers.rs  mod.rs
archetect-cli/src/cli/: mod.rs  mod.rs.orig
archetect-cli/src/configuration/: mod.rs
archetect-cli/src/loggerv/: mod.rs
archetect-cli/src/subcommands/: actions_subcommand.rs  cache_subcommand.rs  commands_subcommand.rs  mod.rs
archetect-core/: Cargo.toml  README.md  build.rs
archetect-core/lua/annotations/: archetect.lua  archetect_modules.lua
archetect-core/scripts/: script.rhai
archetect-core/specs/: archetect.proto  archetype-interface.md
archetect-core/src/: actions.rs  archetype.rs  archive.rs  config.rs  conversions.rs  core.rs  errors.rs  flags.rs  git_io.rs  help.rs  input.rs  lib.rs  library.rs  manifest.rs  render_context.rs  rendering.rs  requirements.rs  script_context.rs  source.rs  system.rs  utils.rs
archetect-core/src/actionables/: render.rs
archetect-core/src/actions/: action_info.rs  actions.rs  conditionals.rs  exec.rs  foreach.rs  mod.rs  render.rs  rules.rs  set.rs
archetect-core/src/archetect/: archetect.rs  mod.rs
archetect-core/src/archetype/: archetype.rs  archetype_directory.rs  archetype_manifest.rs  mod.rs  render_context.rs
archetect-core/src/cache_manager/: cache_manager.rs  mod.rs
archetect-core/src/catalog/: auto_present.rs  catalog.rs  catalog_index.rs  catalog_indexer.rs  catalog_manifest.rs  dispatch.rs  mod.rs  pre_cache.rs
archetect-core/src/check/: check_common.rs  check_windows.rs  mod.rs
archetect-core/src/client/: client.rs  mod.rs
archetect-core/src/config/: answers.rs  archetype.rs  catalog.rs  catalog2.rs  variable.rs
archetect-core/src/configuration/: config_manifest.rs  configuration.rs  configuration_actions_section.rs  configuration_client_section.rs  configuration_local_section.rs  configuration_security_sections.rs  configuration_server.rs  configuration_server_section.rs  configuration_update_section.rs  mod.rs
archetect-core/src/core/: mod.rs  system.rs
archetect-core/src/errors/: answer_error.rs  archetect_client_error.rs  archetect_error.rs  archetect_script_error.rs  archetype_error.rs  catalog_error.rs  mod.rs  render_error.rs  requirements_error.rs  server_error.rs  source_error.rs  system_error.rs
archetect-core/src/heck/: camel.rs  constant.rs  directory.rs  package.rs  pascal.rs  snake.rs  title.rs  train.rs
archetect-core/src/input/: mod.rs
archetect-core/src/interface/: mod.rs  probe_driver.rs
archetect-core/src/io/: async_impl.rs  mod.rs
archetect-core/src/learn/: mod.rs  skill.md
archetect-core/src/loggerv/: mod.rs
archetect-core/src/proto/: conversions.rs  mod.rs
archetect-core/src/runtime/: context.rs
archetect-core/src/script/: mod.rs
archetect-core/src/scripting/: lua.rs  rhai.rs
archetect-core/src/server/: core.rs  mod.rs  server.rs
archetect-core/src/system/: errors.rs
archetect-core/src/template_engine/: errors.rs  macros.rs  sort_utils.rs  tera.rs
archetect-core/src/templating/: mod.rs
archetect-core/src/tera/: filters.rs
archetect-core/src/util/: source.rs
archetect-core/src/v2/: mod.rs  source.rs
archetect-core/tests/: archetype_render_test.rs  int_prompt_tests.rs  lib.rs  scripting_tests.rs  test_utils.rs  utils_tests.rs
archetect-core/tests/archetypes/: README.md
archetect-core/tests/cases/: lua_cases_tests.rs  mod.rs  rhai_cases_tests.rs
archetect-core/tests/catalog/: lua_catalog_render_tests.rs  (+2 more)
archetect-git-cache/: Cargo.toml
archetect-git-cache/src/: error.rs  git.rs  lib.rs
archetect-git-cache/tests/: concurrency.rs  content_addressing.rs  two_gate.rs
archetect-grpc/: Cargo.toml  build.rs
archetect-grpc/specs/: archetect.proto
archetect-grpc/src/: core.rs  lib.rs  server.rs  settings.rs
archetect-inflections/: CRATE_README.md  Cargo.toml
archetect-inflections/src/: lib.rs
archetect-inflections/tests/: lib.rs
archetect-lib/: Cargo.toml
archetect-lib/src/: actions.rs  lib.rs  rendering.rs  requirements.rs  rules.rs  serde_utils.rs
archetect-lib/tests/: archetype_render_test.rs
archetect-mcp/: Cargo.toml
archetect-mcp/src/: io_handle.rs  lib.rs  prompt_envelope.rs  server.rs  session.rs
archetect-models/: Cargo.toml
archetect-models/src/: lib.rs
archetect-terminal-io/: Cargo.toml
archetect-terminal-io/src/: bool_prompt_handler.rs  editor_prompt_info.rs  int_prompt_handler.rs  lib.rs  list_prompt_handler.rs  multiselect_prompt_handler.rs  responder.rs  select_prompt_handler.rs  terminal_client.rs  terminal_io_driver.rs  text_prompt_handler.rs  write_directory_handler.rs  write_file_handler.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  main.rs
(+845 files in other folders)
