[workspace]
members = [
    "archetect-api",
    "archetect-bin",
    "archetect-core",
    "archetect-inflections",
    "archetect-terminal-io",
    "archetect-templating",
    "archetect-terminal-prompts",
    "archetect-validations",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "2.0.7"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
documentation = "https:/archetect.github.io"
edition = "2021"
homepage = "https://archetect.github.io"
license = "MIT"
repository = "https://github.com/archetect/archetect"

[workspace.dependencies]
ansi_term = "0.12"
anyhow = "1.0.69"
assert_matches = "1.5.0"
atty = "0.2"
chrono = "0.4"
clap_complete = "4.4"
content_inspector = "0.2"
directories = "5.0.1"
dyn-clone = "1"
either = "1.9"
farmhash = "1.1"
function_name = "0.3.0"
git2 = "0.18.1"
indoc = "2.0"
pest = "2"
pest_derive = "2"
regex = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.0"
tempfile = "3.4.0"
thiserror = "1.0.26"
unicode-segmentation = "1.2.0"
url = "2"

[workspace.dependencies.camino]
features = ["serde1"]
version = "1.1"

[workspace.dependencies.clap]
features = [
    "cargo",
    "env",
    "color",
]
version = "4.4"

[workspace.dependencies.config]
default-features = false
features = ["yaml"]
version = "0.13"

[workspace.dependencies.linked-hash-map]
features = ["serde_impl"]
version = "0.5.2"

[workspace.dependencies.log]
features = ["std"]
version = "0.4"

[workspace.dependencies.memchr]
default-features = false
version = "2"

[workspace.dependencies.rhai]
features = [
    "serde",
    "internals",
    "metadata",
    "debugging",
    "std",
    "bin-features",
    "sync",
]
version = "1.21.0"

[workspace.dependencies.semver]
features = ["serde"]
version = "1.0"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0"

[workspace.dependencies.uuid]
features = [
    "serde",
    "v4",
]
version = "1.6"
