[workspace]
members = [
    "archetect-aml",
    "archetect-api",
    "archetect-bin",
    "archetect-core",
    "archetect-git-cache",
    "archetect-inflections",
    "archetect-terminal-io",
    "archetect-validations",
    "archetect-mcp",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "3.2.2"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
documentation = "https:/archetect.github.io"
edition = "2021"
homepage = "https://archetect.github.io"
license = "MIT"
repository = "https://github.com/archetect/archetect"

[workspace.dependencies]
archetect-api = { path = "archetect-api", version = "3.0.0" }
archetect-core = { path = "archetect-core", version = "3.0.0" }
archetect-git-cache = { path = "archetect-git-cache", version = "3.0.0" }
archetect-inflections = { path = "archetect-inflections", version = "3.0.0" }
archetect-terminal-io = { path = "archetect-terminal-io", version = "3.0.0" }
archetect-validations = { path = "archetect-validations", version = "3.0.0" }
archetect-mcp = { path = "archetect-mcp", version = "3.0.0" }

ansi_term = "0.12"
anyhow = "1.0.69"
assert_matches = "1.5.0"
atty = "0.2"
chrono = "0.4"
clap_complete = "4.4"
content_inspector = "0.2"
etcetera = "0.8"
dyn-clone = "1"
either = "1.9"
farmhash = "1.1"
function_name = "0.3.0"
git2 = "0.20"
indoc = "2.0"
regex = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1.0"
tempfile = "3.4.0"
thiserror = "2"
unicode-segmentation = "1.2.0"
url = "2"

[workspace.dependencies.camino]
features = ["serde1"]
version = "1.1"

[workspace.dependencies.clap]
features = [
    "cargo",
    "env",
    "color",
]
version = "4.4"

[workspace.dependencies.config]
default-features = false
features = ["yaml", "preserve_order"]
version = "0.13"

[workspace.dependencies.linked-hash-map]
features = ["serde_impl"]
version = "0.5.2"

[workspace.dependencies.log]
features = ["std"]
version = "0.4"

[workspace.dependencies.memchr]
default-features = false
version = "2"

[workspace.dependencies.semver]
features = ["serde"]
version = "1.0"

[workspace.dependencies.serde]
features = ["derive"]
version = "1.0"

[workspace.dependencies.uuid]
features = [
    "serde",
    "v4",
    "v7",
]
version = "1.6"
