[package]
name = "archetect"
description = "Generates Content from Archetype Template Directories and Git Repositories."
keywords = ["code-generation", "rhai", "jinja", "cli"]
readme = "../README.md"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "archetect"
path = "src/main.rs"

[dependencies]
archetect-core = { path = "../archetect-core", version = "2.0.0-ALPHA.11" }
archetect-api = { path = "../archetect-api", version = "2.0.0-ALPHA.11" }
archetect-inquire = { path = "../archetect-terminal-prompts", version = "2.0.0-ALPHA.11" }
archetect-terminal-io = { path = "../archetect-terminal-io", version = "2.0.0-ALPHA.11" }

ansi_term = { workspace = true }
anyhow = { workspace = true }
atty = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { workspace = true }
linked-hash-map = { workspace = true }
log= { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rhai = { workspace = true }
serde= { workspace = true }
serde_json = { workspace = true }
serde_yaml= { workspace = true }
shellexpand = { workspace = true }

