[package]
name = "archetect"
description = "Generates Content from Archetype Template Directories and Git Repositories."
keywords = ["code-generation", "lua", "cli"]
readme = "../README.md"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "archetect"
path = "src/main.rs"

[dependencies]
archetect-core = { workspace = true }
archetect-api = { workspace = true }
archetect-mcp = { workspace = true }
archetect-terminal-io = { workspace = true }

ansi_term = { workspace = true }
anyhow = { workspace = true }
atty = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { workspace = true }
inquire = { version = "0.9", features = ["editor"] }
linked-hash-map = { workspace = true }
log= { workspace = true }
serde= { workspace = true }
serde_json = { workspace = true }
serde_yaml= { workspace = true }
shellexpand = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

[build-dependencies]
embed-resource = "3.0.1"

