[package]
name = "archetect"
description = "Generates Content from Archetype Template Directories and Git Repositories."
homepage = "https://archetect.github.io"
repository = "https://github.com/archetect/archetect"
keywords = ["code-generation", "content-generation", "jinja2", "cli"]
readme = "../README.md"
version = "0.7.2"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "archetect"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
archetect-core = { path = "../archetect-core", version = "0.7.2" }
ansi_term = "0.12"
atty = "0.2"
clap = "2"
indoc = "0.3"
lazy_static = "1.0"
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
log = "0.4"
read_input = "0.8"
serde = "1.0.90"
