[package]
name = "archetect"
description = "Generates Content from Archetype Template Directories and Git Repositories."
homepage = "https://archetect.github.io"
repository = "https://github.com/archetect/archetect"
keywords = ["code-generation", "content-generation", "rhai", "jinja", "minijinja", "cli"]
readme = "../README.md"
version = "2.0.0-ALPHA"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "archetect2"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
archetect-core = { path = "../archetect-core", version = "2.0.0-ALPHA" }
ansi_term = "0.12"
anyhow = "1.0.69"
atty = "0.2"
camino = { version= "1.1", features = ["serde1"] }
clap = { version = "4.2.4", features = ["cargo", "env", "color"] }
clap_complete = "4.2.0"
indoc = "2.0.1"
lazy_static = "1.0"
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
log = "0.4"
read_input = "0.8"
rhai = { version = "1.14", features = ["serde"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.40"
serde_yaml = "0.9.21"
