[package]
name = "archetect"
description = "Generates Content from Archetype Template Directories and Git Repositories."
homepage = "https://archetect.github.io"
repository = "https://github.com/archetect/archetect"
keywords = ["code-generation", "rhai", "jinja", "cli"]
readme = "../README.md"
version = "2.0.0-ALPHA.4"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "archetect"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
archetect-core = { path = "../archetect-core", version = "2.0.0-ALPHA.4" }
archetect-api = { path = "../archetect-api", version = "2.0.0-ALPHA.4" }
archetect-terminal-io = { path = "../archetect-terminal-io", version = "2.0.0-ALPHA.4" }

ansi_term = "0.12"
anyhow = "1.0.69"
atty = "0.2"
camino = { version= "1.1", features = ["serde1"] }
clap = { version = "4.2.4", features = ["cargo", "env", "color"] }
clap_complete = "4.2.0"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
indoc = "2.0.1"
lazy_static = "1.0"
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
log = "0.4"
pest = "2"
pest_derive = "2"
read_input = "0.8"
rhai = { version = "1.14", features = ["serde"] }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.40"
serde_yaml = "0.9.21"
shellexpand = "3.1.0"
