[package]
name = "archetect-core"
description = "Generates Content from Archetype Template Directories and Git Repositories."
readme = "README.md"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archetect-api = { workspace = true }
archetect-terminal-io = { workspace = true }
archetect-inquire = { workspace = true, features = ["editor"] }
archetect-inflections = { workspace = true }
archetect-templating = { workspace = true, features = ["source", "urlencode", "json"] }
archetect-validations = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
content_inspector = { workspace = true }
directories = { workspace = true }
either = { workspace = true }
farmhash = { workspace = true }
git2 = { workspace = true }
indoc = { workspace = true }
linked-hash-map = { workspace = true }
log = { workspace = true }
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
memchr = { workspace = true }
octocrab = "0.44"
regex = { workspace = true }
rhai = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml= { workspace = true }
shellexpand  = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
futures = "0.3"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tracing = "0.1"
unicode-segmentation = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
rand = "0.9.0-beta.0"
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
http-body-util = "0.1"
[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"


[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
function_name = { workspace = true }
indoc = { workspace = true }
