[package]
name = "archetect-core"
description = "Generates Content from Archetype Template Directories and Git Repositories."
readme = "README.md"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archetect-api = { workspace = true }
archetect-terminal-io = { workspace = true }
archetect-aml = { path = "../archetect-aml", version = "3.0.0" }
archetect-inflections = { workspace = true }
archetect-validations = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
content_inspector = { workspace = true }
etcetera = { workspace = true }
either = { workspace = true }
farmhash = { workspace = true }
git2 = { workspace = true }
indoc = { workspace = true }
inquire = "0.9"
linked-hash-map = { workspace = true }
log = { workspace = true }
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize"] }
memchr = { workspace = true }
octocrab = "0.49"
regex = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml= { workspace = true }
shellexpand  = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
toml = "1"
futures = "0.3"
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"] }
tonic-health = "0.14"
tonic-reflection = "0.14"
tracing = "0.1"
unicode-segmentation = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zip = "8"
tar = "0.4"
flate2 = "1.0"
http-body-util = "0.1"
[target.'cfg(windows)'.dependencies]
winreg = "0.56"


[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
function_name = { workspace = true }
indoc = { workspace = true }
rcgen = "0.14"
