[package]
name = "archetect-grpc"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archetect-core = { path = "../archetect-core", version = "2.0.0-ALPHA.18"}

anyhow = { workspace = true }
prost = "0.12.4"
serde = {version = "1.0", features = ["serde_derive"] }
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-attributes = "0.1"
h2 = "0.4.4"
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
