[package]
name = "archetect-grpc"
version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
archetect-api = { path = "../archetect-api", version = "2.0.0-ALPHA.19" }
archetect-core = { path = "../archetect-core", version = "2.0.0-ALPHA.19" }
archetect-terminal-io = { path = "../archetect-terminal-io", version = "2.0.0-ALPHA.19" }

anyhow = { workspace = true }
camino = { workspace = true }
prost = "0.12.4"
rhai = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tonic = "0.11.0"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.15"
tracing = "0.1"
tracing-attributes = "0.1"
h2 = "0.4.4"
tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
futures = "0.3.30"
log = "0.4.21"

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.11.0"
