[package]
name = "archetect"
version = "0.1.0"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Generates Content from Archetype Template Directories and Git Repositories."

[dependencies]
clap = "2.33"
directories = "2.0.2"
indoc = "0.3"
glob = "0.3"
log = { version = "0.4", features = ["std"] }
memchr = { version = "2", default-features = false }
pest = "2"
pest_derive = "2"
read_input = "0.8"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.40"
shellexpand = "1"
tempfile = "3"
toml = "0.5"
unicode-segmentation = "1.2.0"

globwalk = "0.7"
v_htmlescape = "0.4"

# used in slugify filter
slug = "0.1"
# used in striptags filters
regex = "1.0"
# used for static regex
lazy_static = "1.0"
# used in urlencode filter
url = "2"
# used in filesizeformat filter
humansize = "1"
# used in date format filter
chrono = "0.4"
# used in truncate filter
unic-segment = "0.9"

[dev-dependencies]
pretty_assertions = "0.6"
matches = "0.1"

[features]
default = []
preserve_order = ["serde_json/preserve_order"]