[package]
name = "archetect-mcp"
description = "MCP stdio server for Archetect"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
archetect-api = { workspace = true }
archetect-core = { workspace = true }
camino = { workspace = true }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "1.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
rhai = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
