[package]
name = "archetect-models"
version = "2.0.0-ALPHA.6"
authors = ["Jimmie Fulton <jimmie.fulton@gmail.com>"]
description = "Generates Content from Archetype Template Directories and Git Repositories."
homepage = "https://archetect.github.io"
repository = "https://github.com/archetect/archetect"
keywords = ["code-generation", "content-generation", "jinja2"]
readme = "../README.md"
edition = "2021"
license = "MIT"

[dependencies]
nom = "7.1.3"
