[package]
name = "archetect-terminal-io"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archetect-api = { path = "../archetect-api", version = "2.0.0-ALPHA.18" }
archetect-inquire = { path = "../archetect-terminal-prompts", version = "2.0.0-ALPHA.18", features = ["editor"] }
archetect-validations = { path = "../archetect-validations", version = "2.0.0-ALPHA.18" }

camino = { workspace = true }
dyn-clone = { workspace = true }
log = { workspace = true }
