[package]
name = "archetect-terminal-io"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archetect-api = { workspace = true }
archetect-inquire = { workspace = true, features = ["editor"] }
archetect-validations = { workspace = true }

camino = { workspace = true }
dyn-clone = { workspace = true }
log = { workspace = true }
