[package]
name = "archetect-terminal-io"

version.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archetect-api = { workspace = true }
archetect-validations = { workspace = true }

camino = { workspace = true }
content_inspector = "0.2"
dyn-clone = { workspace = true }
inquire = { version = "0.9", features = ["editor"] }
log = { workspace = true }
similar = "2"
